--- a/hw01/index.html
+++ b/hw01/index.html
@@ -169,17 +169,17 @@
         </tr>
         <tr>
           <td rowspan="4" id="myTotal"></td>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox1 checked"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox1"></td>
           <td id='m1'>4</td>
           <td>Simple baseline - 描述</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox2 checked"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox2"></td>
           <td id='m2'>4</td>
           <td>Medium baseline - 描述</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox3 checked"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox3"></td>
           <td id='m3'>2</td>
           <td>Strong baseline - 描述</td>
         </tr>
@@ -250,5 +250,6 @@
 
 </body>
 </html>
+
 
 
