Fix HTML formatting and structure

--- a/hw01/index.html
+++ b/hw01/index.html
@@ -181,7 +181,7 @@
             錄影後上傳YouTube(或是直播到YouTube)，影片時間超過三小時。</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox3" checked></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox3"></td>
           <td id='m3'>2</td>
           <td>Strong baseline - 匯出標註好的心臟 nii.gz 檔。
             Dice-Sørensen coefficient 分數，介於全班前20名。(1pt)
@@ -254,6 +254,7 @@
 
 </body>
 </html>
+
 
 
 
