--- a/hw02/index.html
+++ b/hw02/index.html
@@ -199,11 +199,11 @@
       <table>
         <tr>
           <td>Simple Baseline Dice分數圖片
-          <img src="simple.png" width="100%" height="560">
+          <img src="simple.jpg" width="100%" height="560">
         </tr>
         <tr>
           <td>Medium Baseline Dice分數圖片
-          <img src="medium.png" width="100%" height="560">
+          <img src="medium.jpg" width="100%" height="560">
         </tr>
       </table>
     </div>
@@ -277,3 +277,4 @@
 
 </body>
 </html>
+
