--- a/hw02/index.html
+++ b/hw02/index.html
@@ -153,7 +153,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
+      這次作業使用了colab去進行機器學習，在使用的過程中遇到了許多的挫折，例如:記憶體容量不足、colab有使用時間的限制...等等問題，但是經過一次又一次的試錯，最終還是完成作業，至於裡面使用的Unet模型架構就需要自己花時間去了解，這個架構是如何完成任務的。
     </div>
   </div>
 
@@ -184,7 +184,7 @@
           <td>Strong baseline - 使用其他模型(例如. Attn U-Net、UNETR、Swin UNETR...等)，對心臟資料進行訓練，並繳交colab程式碼</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox4" checked></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox4 "></td>
           <td id='m4'>-10</td>
           <td>沒有寫100字心得</td>
         </tr>
@@ -259,5 +259,6 @@
 
 </body>
 </html>
+
 
 
