--- a/hw03/index.html
+++ b/hw03/index.html
@@ -205,12 +205,12 @@
         <table>
           <tr>
             <td> Simple Baseline 圖片
-              <img src="simple.jpg" width="100%">
+              <img src="simple.png" width="100%">
           </tr>
           <tr>
           <tr>
             <td> Medium Baseline 圖片
-              <img src="medium.jpg" width="100%">
+              <img src="medium.png" width="100%">
           </tr>
          
         </table>
@@ -263,3 +263,4 @@
 </body>
 
 </html>
+
