Fix HTML encoding issues in index.html

--- a/hw03/index.html
+++ b/hw03/index.html
@@ -205,12 +205,12 @@
         <table>
           <tr>
             <td> Simple Baseline 圖片
-              <img src="simple.png" width="100%">
+              <img src="simple.PNG" width="100%">
           </tr>
           <tr>
           <tr>
             <td> Medium Baseline 圖片
-              <img src="medium.png" width="100%">
+              <img src="medium.PNG" width="100%">
           </tr>
          
         </table>
@@ -263,4 +263,5 @@
 </body>
 
 </html>
+
 
