--- a/hw04/index.html
+++ b/hw04/index.html
@@ -1,45 +1,46 @@
 <!doctype html>
 <html lang="zh-Hant-TW">
+
 <head>
-<!-- Required meta tags -->
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- D3, jquery -->
-<script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" charset="utf-8"></script>
+  <!-- D3, jquery -->
+  <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" charset="utf-8"></script>
 
-<!-- Bootstrap CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
 
-<title>作業四</title>
-<!-- https://alexlenail.me/NN-SVG/about.html -->
-<link rel="icon" href="../hw00/favicon.svg"/>
-<style type="text/css">
-  @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap');
+  <title>作業四</title>
+  <!-- https://alexlenail.me/NN-SVG/about.html -->
+  <link rel="icon" href="../hw00/favicon.svg" />
+  <style type="text/css">
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap');
 
-  @font-face {
-    font-family:'CircleFont';
-    src: url(https://circle472.github.io/ct2022s/hw04/CircleFont_v2.woff2); 
-  }
+    @font-face {
+      font-family: 'CircleFont';
+      src: url(https://circle472.github.io/ct2022s/hw04/CircleFont_v2.woff2);
+    }
 
-  table {
+    table {
       border-collapse: collapse;
-      border: 2px solid white; /* rgba(217,140,144,1) */
-      font-size:  16pt;
+      border: 2px solid white;
+      /* rgba(217,140,144,1) */
+      font-size: 16pt;
       margin-left: auto;
       margin-right: auto;
-  }
+    }
 
-  td,
-  th {
+    td,
+    th {
       border: 1px solid white;
       padding: 2px 8px;
-  }
+    }
 
-  .flipswitch
-  {
+    .flipswitch {
       position: relative;
       background: white;
       width: 120px;
@@ -47,208 +48,235 @@
       -webkit-appearance: initial;
       border-radius: 3px;
       -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-      outline:none;
+      outline: none;
       font-size: 14px;
       font-family: Trebuchet, Arial, sans-serif;
       font-weight: bold;
-      cursor:pointer;
-      border:1px solid #ddd;
-  }
-  .flipswitch:after
-  {
-      position:absolute;
-      top:5%;
-      display:block; 
-      line-height:16px;
-      width:45%;
-      height:90%;
-      background:#fff;
-      box-sizing:border-box;
-      text-align:center;
-      transition: all 0.3s ease-in 0s; 
-      color:rgba(159,53,58,1);
-      border:#888 1px solid;
-      border-radius:3px;
-  }
-  .flipswitch:after
-  {
-      left:2%;
+      cursor: pointer;
+      border: 1px solid #ddd;
+    }
+
+    .flipswitch:after {
+      position: absolute;
+      top: 5%;
+      display: block;
+      line-height: 16px;
+      width: 45%;
+      height: 90%;
+      background: #fff;
+      box-sizing: border-box;
+      text-align: center;
+      transition: all 0.3s ease-in 0s;
+      color: rgba(159, 53, 58, 1);
+      border: #888 1px solid;
+      border-radius: 3px;
+    }
+
+    .flipswitch:after {
+      left: 2%;
       content: "未完成";
-  }
-  .flipswitch:checked:after
-  {
-      left:53%;
+    }
+
+    .flipswitch:checked:after {
+      left: 53%;
       content: "完成";
-  }
+    }
 
-  body {
-    background-color: rgb(106, 76, 156); /* #6A4C9C */
-    color: rgb(106, 76, 156);
-    font-family: 'CircleFont', 'Noto Sans JP', serif;
-  }
+    body {
+      background-color: rgb(106, 76, 156);
+      /* #6A4C9C */
+      color: rgb(106, 76, 156);
+      font-family: 'CircleFont', 'Noto Sans JP', serif;
+    }
 
-  .container-fluid {
-    width:  90%;
-  }
+    .container-fluid {
+      width: 90%;
+    }
 
-  .hw12 {
-    border: 1px solid rgb(159, 53, 58);
-    margin-top: 8px;
-    margin-bottom: 8px;
-  }
+    .hw12 {
+      border: 1px solid rgb(159, 53, 58);
+      margin-top: 8px;
+      margin-bottom: 8px;
+    }
 
-  .twenty {
-    border: 1px solid #f9eced;
-    color: #f9eced;
-    padding: 8px;
-    font-size: 18pt;
-  }
+    .twenty {
+      border: 1px solid #f9eced;
+      color: #f9eced;
+      padding: 8px;
+      font-size: 18pt;
+    }
 
-  .twenty a {
-    color:  yellow;
-  }
+    .twenty a {
+      color: yellow;
+    }
 
-  .twenty a:hover {
-    color: #f9eced;
-    font-size:  16pt;
-  }
+    .twenty a:hover {
+      color: #f9eced;
+      font-size: 16pt;
+    }
 
-  .twenty:hover {
+    .twenty:hover {
       box-shadow: 0 0 5px 3px #f9eced;
-      color: cyan; 
+      color: cyan;
       text-shadow: 0 0 6px #FFFFFF, 0 0 6px #000000;
-  }
+    }
 
-  .toprow {
-    margin-top: 36px;
-  }
+    .toprow {
+      margin-top: 36px;
+    }
 
-  .bottomrow {
-    margin-bottom: 36px;
-  }
-</style>
+    .bottomrow {
+      margin-bottom: 36px;
+    }
+  </style>
 </head>
+
 <body>
 
-<div class="container-fluid">
+  <div class="container-fluid">
 
-  <!-- ---------------------------------------------- -->
-  <div class="row hw12 toprow">
-    <div class="col twenty"><a href="../hw00/index.html">00</a></div>
-    <div class="col twenty"><a href="../hw01/index.html">01</a></div>
-    <div class="col twenty"><a href="../hw02/index.html">02</a></div>
-    <div class="col twenty"><a href="../hw03/index.html">03</a></div>
-    <div class="col twenty"><a href="../hw04/index.html">04</a></div>
-    <div class="col twenty"><a href="../hw05/index.html">05</a></div>
-    <div class="col twenty"><a href="../hw06/index.html">06</a></div>
-  </div>
-
-  <!-- ------------------------------------------------>
-  <div class="row hw12">
-    <div class="col-md-12 twenty">
-      <h1>作業 04</h1>
+    <!-- ---------------------------------------------- -->
+    <div class="row hw12 toprow">
+      <div class="col twenty"><a href="../hw00/index.html">00</a></div>
+      <div class="col twenty"><a href="../hw01/index.html">01</a></div>
+      <div class="col twenty"><a href="../hw02/index.html">02</a></div>
+      <div class="col twenty"><a href="../hw03/index.html">03</a></div>
+      <div class="col twenty"><a href="../hw04/index.html">04</a></div>
+      <div class="col twenty"><a href="../hw05/index.html">05</a></div>
+      <div class="col twenty"><a href="../hw06/index.html">06</a></div>
     </div>
-  </div>
 
-  <!-- ------------------------------------------------>
-  <div class="row hw12">
-    <div class="col-md-12 twenty">
-      心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
+    <!-- ------------------------------------------------>
+    <div class="row hw12">
+      <div class="col-md-12 twenty">
+        <h1>作業 04</h1>
+      </div>
     </div>
-  </div>
 
-  <!-- ------------------------------------------------>
-  <div class="row hw12">
-    <div class="col-md-12 twenty">
-      <table>
-        <tr>
-          <th>總分</th>
-          <th>完成後打勾</th>
-          <th>配分</th>
-          <th>分項描述</th>
-        </tr>
-        <tr>
-          <td rowspan="4" id="myTotal"></td>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox1"></td>
-          <td id='m1'>4</td>
-          <td>Simple baseline - 描述</td>
-        </tr>
-        <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox2"></td>
-          <td id='m2'>4</td>
-          <td>Medium baseline - 描述</td>
-        </tr>
-        <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox3"></td>
-          <td id='m3'>2</td>
-          <td>Strong baseline - 描述</td>
-        </tr>
-        <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox4" checked></td>
-          <td id='m4'>-10</td>
-          <td>沒有寫100字心得</td>
-        </tr>
+    <!-- ------------------------------------------------>
+    <div class="row hw12">
+      <div class="col-md-12 twenty">
+        這次作業讓我了解到標註資料的工具labelme，也是我第一次標註這種醫學影像資料，不過很可惜的一點是，由於我沒有相關的醫學背景所以我標註的時候，都很不確定我是否標註正確，這是我覺得比較可惜的地方
+        但是這次作業也是讓我體驗到了標註的過程挺不賴的。
+      </div>
 
-      </table>
-    </div>
-  </div>
+      <!-- ------------------------------------------------>
+      <div class="row hw12">
+        <div class="col-md-12 twenty">
+          <table>
+            <tr>
+              <th>總分</th>
+              <th>完成後打勾</th>
+              <th>配分</th>
+              <th>分項描述</th>
+            </tr>
+            <tr>
+              <td rowspan="4" id="myTotal"></td>
+              <td><input type="checkbox" class="flipswitch" id="myCheckbox1" checked></td>
+              <td id='m1'>4</td>
+              <td>Simple baseline - 將06_ct.nii.gz 透過3D Slicer 還原成233切的 .dcm檔，將含有主動脈瓣的 .dcm壓縮成 dcm.zip 透過 Colab 轉成
+                .png檔。<br>
+                使用 Labelme 內建基本功能 Create Rectangle，對 .png檔進行手動主動脈瓣標註。<br>
+                將標註過程全程錄影，然後將影片上傳到 YouTube (或是直播到YouTube)。</td>
+            </tr>
+            <tr>
+              <td><input type="checkbox" class="flipswitch" id="myCheckbox2" checked></td>
+              <td id='m2'>4</td>
+              <td>Medium baseline - 將06_ct.nii.gz 透過3D Slicer 擴充圖片至64張。<br>
+                使用 Labelme 內建基本功能 Create Rectangle，對 .png檔進行手動主動脈瓣標註。<br>
+                將標註過程全程錄影，然後將影片上傳到 YouTube (或是直播到YouTube)。</td>
+            </tr>
+            <tr>
+              <td><input type="checkbox" class="flipswitch" id="myCheckbox3" checked></td>
+              <td id='m3'>2</td>
+              <td>Strong baseline - 上傳整理完的一份 .txt 檔至 github<br>
+                AP 分數，名列全班前20名。(1pt)<br>
+                AP 分數，名列全班前10名。(1pt)</td>
+            </tr>
+            <tr>
+              <td><input type="checkbox" class="flipswitch" id="myCheckbox4"></td>
+              <td id='m4'>-10</td>
+              <td>沒有寫100字心得</td>
+            </tr>
 
-  <!-- ------------------------------------------------>
-  <div class="row hw12 bottomrow">
-    <div class="col-md-12 twenty">
-      <video id="video1" style="width:100%;max-width:100%;" controls="">
-        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-      </video>
-    </div>
-  </div>
+          </table>
+        </div>
+      </div>
 
-  <!-- ------------------------------------------------>
+      ------------------------------------------------>
+      <div class="row hw12 bottomrow">
+        <div class="col-md-12 twenty">
+          Simple標註
+          <iframe width="992" height="560" src="https://www.youtube.com/embed/bgYX6SHpN3I?si=RfAOEZOvtsI52zZ4"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+      </div>
 
-  <!-- ------------------------------------------------>
+      <div class="row hw12 bottomrow">
+        <div class="col-md-12 twenty">
+          Medium標註
+          <iframe width="992" height="560" src="https://www.youtube.com/embed/WaV1vg6mWSE?si=Y5ZMOY1km6N9UmeK" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+      </div>
 
-
-<script>
-  $(function() {
-    var f = function() {
-      $(this).next().text($(this).is(':checked') ? '做完' : '未做完');
-    };
-    $('input').change(f).trigger('change');
-  });
-
-  d3.select("#myCheckbox1").on("change",update);
-  d3.select("#myCheckbox2").on("change",update);
-  d3.select("#myCheckbox3").on("change",update);
-  d3.select("#myCheckbox4").on("change",update);
-  // d3.select("#myCheckbox5").on("change",update);
-  // d3.select("#myCheckbox6").on("change",update);
-  // d3.select("#myCheckbox7").on("change",update);
-
-  update();
-  
-  function update(){
-
-    var score = 0;
-
-    if (d3.select("#myCheckbox1").property("checked")){
-      score += parseInt(d3.select('#m1').html());
-    }
-
-    if (d3.select("#myCheckbox2").property("checked")){
-      score += parseInt(d3.select('#m2').html());   
-    }
-
-    if (d3.select("#myCheckbox3").property("checked")){
-      score += parseInt(d3.select('#m3').html());   
-    }
-
-    if (d3.select("#myCheckbox4").property("checked")){
-      score += parseInt(d3.select('#m4').html());   
-    }
+      <div class="row hw12 bottomrow">
+        <div class="col-md-12 twenty">
+          標註檔連結:
+          <a href="https://github.com/jason04280428/ml2025f/blob/main/hw04/113618005.txt" download>
+            https://github.com/jason04280428/ml2025f/blob/main/hw04/113618005.txt
+          </a>
+        </div>
+      </div>
 
 
-    d3.select("#myTotal").html(score);    
-  }
-</script>
+      <script>
+        $(function () {
+          var f = function () {
+            $(this).next().text($(this).is(':checked') ? '做完' : '未做完');
+          };
+          $('input').change(f).trigger('change');
+        });
+
+        d3.select("#myCheckbox1").on("change", update);
+        d3.select("#myCheckbox2").on("change", update);
+        d3.select("#myCheckbox3").on("change", update);
+        d3.select("#myCheckbox4").on("change", update);
+        // d3.select("#myCheckbox5").on("change",update);
+        // d3.select("#myCheckbox6").on("change",update);
+        // d3.select("#myCheckbox7").on("change",update);
+
+        update();
+
+        function update() {
+
+          var score = 0;
+
+          if (d3.select("#myCheckbox1").property("checked")) {
+            score += parseInt(d3.select('#m1').html());
+          }
+
+          if (d3.select("#myCheckbox2").property("checked")) {
+            score += parseInt(d3.select('#m2').html());
+          }
+
+          if (d3.select("#myCheckbox3").property("checked")) {
+            score += parseInt(d3.select('#m3').html());
+          }
+
+          if (d3.select("#myCheckbox4").property("checked")) {
+            score += parseInt(d3.select('#m4').html());
+          }
+
+
+          d3.select("#myTotal").html(score);
+        }
+      </script>
 
 </body>
+
 </html>
