--- a/hw06/index.html
+++ b/hw06/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="zh-Hant-TW">
 <head>
@@ -154,14 +153,14 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      這次作業是使用HW5訓練好的權重去進行推論，學到了如果一次推論太多資料會導致COLAB記憶體容量不足，所以要將資料分開推論，最後在合併，然後這次做出來的結果medium分數比simple低，可能的原因是因為過擬和，所以雖然在訓練時分數比較高，但是放到測試集去做驗證時，不一定會取得比較高的分數。
+     這次作業是使用HW5訓練好的權重去進行推論，學到了如果一次推論太多資料會導致COLAB記憶體容量不足，所以要將資料分開推論，最後在合併，然後這次做出來的結果medium分數比simple低，可能的原因是因為過擬和，所以雖然在訓練時分數比較高，但是放到測試集去做驗證時，不一定會取得比較高的分數。
     </div>
   </div>
 
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      <table width="100%">
+      <table>
         <tr>
           <th>總分</th>
           <th>完成後打勾</th>
@@ -172,17 +171,17 @@
           <td rowspan="4" id="myTotal"></td>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox1" checked></td>
           <td id='m1'>4</td>
-          <td>Simple baseline - 完成 Colab baseline 的預測並上傳至競賽網頁</td>
+          <td>Simple baseline - 描述</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox2" checked></td>
           <td id='m2'>4</td>
-          <td>Medium baseline - 使用 HW5 Medium baseline 訓練出來的權重檔預測並上傳至競賽網頁</td>
+          <td>Medium baseline - 描述</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox3"></td>
           <td id='m3'>2</td>
-          <td>Strong baseline - 得到比 Simple baseline 更高的預測分數</td>
+          <td>Strong baseline - 描述</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox4"></td>
@@ -195,21 +194,24 @@
   </div>
 
   <!-- ------------------------------------------------>
-  <div class="row hw12 bottomrow">
+
     <div class="col-md-12 twenty">
       <!-- <iframe width="100%" height="560" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
 
       <table>
-        <tr>
+        <tbody><tr>
           <td> Simple Baseline 圖片
-          <img src="simple.PNG" width="100%" height="auto">
-        </tr>
+          <img src="HW6-simp.png" width="100%" height="auto">
+        </td></tr>
         <tr>
           <td> Medium Baseline 圖片
-          <img src="medium.PNG" width="100%" height="auto">
-        </tr>
-       
-      </table>
+          <img src="hw6-mid.png" width="100%" height="auto">
+        </td></tr>
+        <tr>
+          <td> Strong Baseline 圖片
+          <img src="HW6-s.png" width="100%" height="auto">
+        </td></tr>
+      </tbody></table>
     </div>
   </div>
 
@@ -263,3 +265,8 @@
 
 </body>
 </html>
+
+
+
+
+
