--- a/hw06/index.html
+++ b/hw06/index.html
@@ -167,16 +167,16 @@
           <th>配分</th>
           <th>分項描述</th>
         </tr>
-        <tr>
+       <tr>
           <td rowspan="4" id="myTotal"></td>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox1" checked></td>
           <td id='m1'>4</td>
-          <td>Simple baseline - 描述</td>
+          <td>Simple baseline - 完成 Colab baseline 的預測並上傳至競賽網頁</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox2" checked></td>
           <td id='m2'>4</td>
-          <td>Medium baseline - 描述</td>
+          <td>Medium baseline - 使用 HW5 Medium baseline 訓練出來的權重檔預測並上傳至競賽網頁</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox3"></td>
@@ -201,15 +201,11 @@
       <table>
         <tbody><tr>
           <td> Simple Baseline 圖片
-          <img src="HW6-simp.png" width="100%" height="auto">
+          <img src="simple.PNG" width="100%" height="auto">
         </td></tr>
         <tr>
           <td> Medium Baseline 圖片
-          <img src="hw6-mid.png" width="100%" height="auto">
-        </td></tr>
-        <tr>
-          <td> Strong Baseline 圖片
-          <img src="HW6-s.png" width="100%" height="auto">
+          <img src="medium.PNG" width="100%" height="auto">
         </td></tr>
       </tbody></table>
     </div>
@@ -265,6 +261,7 @@
 
 </body>
 </html>
+
 
 
 
